--- a/0x02-i18n/templates/4-index.html
+++ b/0x02-i18n/templates/4-index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ get_locale() }}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ _('home_title') }}</title>
+    <title>{{ _('Welcome to Holberton') }}</title>
 </head>
 <body>
-    <h1>{{ _('home_header') }}</h1>
+    <h1>{{ _('Hello world!') }}</h1>
+    {% if g.user %}
+    <p>{{ _('You are logged in as %(username)s.', username=g.user['name']) }}</p>
+    {% else %}
+    <p>{{ _('You are not logged in.') }}</p>
+    {% endif %}
 </body>
 </html>
